// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`generateKyselySchema generates correct pg DDL 1`] = `
"CREATE TABLE IF NOT EXISTS billing_invoices (
  id TEXT PRIMARY KEY NOT NULL,
  amount INTEGER NOT NULL,
  status TEXT NOT NULL,
  is_active BOOLEAN NOT NULL,
  metadata JSONB,
  created_at TIMESTAMP NOT NULL,
  user_id TEXT NOT NULL,
  FOREIGN KEY (user_id) REFERENCES billing_user(id) ON DELETE CASCADE
);"
`;

exports[`generateKyselySchema generates correct mysql DDL 1`] = `
"CREATE TABLE IF NOT EXISTS billing_invoices (
  id TEXT PRIMARY KEY NOT NULL,
  amount INT NOT NULL,
  status TEXT NOT NULL,
  is_active BOOLEAN NOT NULL,
  metadata JSON,
  created_at TIMESTAMP NOT NULL,
  user_id VARCHAR(255) NOT NULL,
  FOREIGN KEY (user_id) REFERENCES billing_user(id) ON DELETE CASCADE
);"
`;

exports[`generateKyselySchema generates correct sqlite DDL 1`] = `
"CREATE TABLE IF NOT EXISTS billing_invoices (
  id TEXT PRIMARY KEY NOT NULL,
  amount INTEGER NOT NULL,
  status TEXT NOT NULL,
  is_active INTEGER NOT NULL,
  metadata TEXT,
  created_at INTEGER NOT NULL,
  user_id TEXT NOT NULL,
  FOREIGN KEY (user_id) REFERENCES billing_user(id) ON DELETE CASCADE
);"
`;
